--- a/test/unittests.html
+++ b/test/unittests.html
@@ -10,7 +10,7 @@
     <div id="mocha"></div>
 
     <!-- libs -->
-    <script src="../dist/openpgp.js"></script>
+    <script src="../src/openpgp.js"></script>
     <script src="lib/chai.js"></script>
     <script src="lib/mocha.js"></script>
     <script src="lib/fetch.js"></script>
